# h2hdb

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
.Codex/hooks/: finalize-markdown.sh  finalize-python.sh
.claude/: settings.local.json
.claude/hooks/: finalize-markdown.sh  finalize-python.sh
.github/workflows/: publish.yml
h2hdb/: __init__.py  config_loader.py  h2h_db.py
hentaidb/: __init__.py  config_loader.py  gallery_db.py  gallery_info_parser.py  logger.py  sql.py  sql_connector.py
hentaidb/tests/: __init__.py  test_logger.py
scripts/: rebuild-env.sh
src/h2hdb/: __init__.py  __main__.py  cbz_files.py  compress_gallery_to_cbz.py  config_loader.py  duplicated_hashes.py  gallery_info_parser.py  h2h_db.py  h2hdb_h2hdb.py  h2hdb_spec.py  hash_dict.py  information.py  komga.py  logger.py  mariadb_connector.py  mysql_connector.py  repository.py  settings.py  sql_connector.py  sqlite_connector.py  table_comments.py  table_database_setting.py  table_download_queue.py  table_files_dbids.py  table_gids.py  table_pending_removals.py  table_removed_gids.py  table_tags.py  table_times.py  table_titles.py  table_uploadaccounts.py  threading_tools.py  todelete_queue.py  todownload_queue.py  view_duplicated_hashes.py  view_ginfo.py
tests/: conftest.py  test_baseline.py  test_baseline_mariadb.py  test_hashing.py  test_insert_h2h_download.py  test_sqlite_connector.py
