[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "h2hdb"
version = "0.10.5.1"
description = "A simple H@H database"
readme = "README.md"
authors = [{ name = "Kuan-Lun Wang" }]
license = { text = "GNU Affero General Public License v3" }
dependencies = [
    "h2h-galleryinfo-parser>=0.3.0",
    "mysql-connector-python>=9.7.0,<10.0.0",
    "pillow>=12.2.0,<13.0.0",
    "pydantic>=2.13.4,<3.0.0",
]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "pymarkdownlnt>=0.9.38",
]

[project.urls]
Homepage = "https://github.com/Kuan-Lun/h2hdb"
Source = "https://github.com/Kuan-Lun/h2hdb"
Tracker = "https://github.com/Kuan-Lun/h2hdb/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/h2hdb"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E203/E226 conflict with Black's formatting choices; E501 is redundant with
# Black's line-length enforcement and would otherwise fire on long inline SQL.
extend-ignore = ["E203", "E226", "E501"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "testcontainers>=4.14.2",
]
